download banxico time series -- need to fix imports

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,21 @@
 appdirs==1.4.3
+beautifulsoup4==4.6.0
 click==6.7
 Flask==0.12.2
 gunicorn==19.7.1
+html5lib==0.999999999
 itsdangerous==0.24
 Jinja2==2.9.6
+lxml==3.7.3
 MarkupSafe==1.0
+numpy==1.12.1
 packaging==16.8
+pandas==0.20.1
 pyparsing==2.2.0
+python-dateutil==2.6.0
+pytz==2017.2
 requests==2.14.2
 six==1.10.0
+webencodings==0.5.1
 Werkzeug==0.12.2
+wget==3.2
